--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "env\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\Lenovo\\Anaconda3\\envs\\bil\\python.exe"
 }
